--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,9 +6,9 @@ h1, h2, h3, h4, h5, h6 {
  font-family:'Courier New', Courier, monospace;
 }
 
-section{
+/* section{
     @apply min-h-[65vh];
-}
+} */
 
 .tooltip:hover {
     opacity: 1;
